--- a/ACL4SSR_Online_C_NDL_LB.ini
+++ b/ACL4SSR_Online_C_NDL_LB.ini
@@ -45,10 +45,8 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`.*
-; custom_proxy_group=🧜🏻‍♀️ 特定路由-轮询`load-balance`(美国|日本|台湾|韩国)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🧜🏻‍♀️ 特定路由-轮询`load-balance`(美国|日本|台湾|韩国)`http://www.gstatic.com/generate_204`300,1,50
-; custom_proxy_group=⚖️ 负载均衡-轮询`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=⚖️ 负载均衡-轮询`load-balance`.*`http://www.gstatic.com/generate_204`300,1,50
+custom_proxy_group=🧜🏻‍♀️ 特定路由-轮询`load-balance`(美国|日本|台湾|韩国)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=⚖️ 负载均衡-轮询`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 
 
 enable_rule_generator=true
