--- a/ACL4SSR_Online_Customize.ini
+++ b/ACL4SSR_Online_Customize.ini
@@ -1,14 +1,10 @@
 [custom]
-;原名称：ACL4SSR_Online_C_NDL_LB
-;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则-在线版
 
 ;负载均衡+自定义域名特定路径路由
-
-;解决DNS泄露
+;避免DNS泄露
 
 ;去广告：支持
-;自动测速：不支持
 ;微软分流：支持
 ;苹果分流：支持
 ;增强中国IP段：支持
@@ -48,7 +44,6 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连
 custom_proxy_group=🧜🏻‍♀️ 特定路由-轮询`load-balance`(美国|日本|台湾|韩国)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=⚖️ 负载均衡-轮询`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
-
 
 enable_rule_generator=true
 overwrite_original_rules=true
