--- a/ACL4SSR_Online_Customize.ini
+++ b/ACL4SSR_Online_Customize.ini
@@ -1,14 +1,9 @@
 [custom]
 ;acl4SSR规则-在线版
 
-;负载均衡+自定义域名特定路径路由
 ;避免DNS泄露
-
-;去广告：支持
-;微软分流：支持
-;苹果分流：支持
-;增强中国IP段：支持
-;增强国外GFW：支持
+;负载均衡+自定义域名特定路径路由
+;去广告、微软分流、苹果分流、增强中国IP段、增强国外GFW。
 
 ruleset=🧜🏻‍♀️ 特定路由-轮询,https://github.com/carl2018xy/Sub_C_Rules/raw/main/CustomizeDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
