--- a/ACL4SSR_Online_Customize.ini
+++ b/ACL4SSR_Online_Customize.ini
@@ -5,7 +5,6 @@
 ;负载均衡+自定义域名特定路径路由
 ;去广告、微软分流、苹果分流、增强中国IP段、增强国外GFW。
 
-ruleset=🧜🏻‍♀️ 特定路由-轮询,https://github.com/carl2018xy/Sub_C_Rules/raw/main/CustomizeDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
@@ -26,8 +25,8 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ; ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]⚖️ 负载均衡-轮询`[]DIRECT`.*
-custom_proxy_group=🌍 国外媒体`select`[]🧜🏻‍♀️ 特定路由-轮询`[]🎯 全球直连
+custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🎯 全球直连
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🎯 全球直连
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🎯 全球直连
 custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]🎯 全球直连
@@ -36,8 +35,6 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连
-custom_proxy_group=🧜🏻‍♀️ 特定路由-轮询`load-balance`(美国|台湾|韩国)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=⚖️ 负载均衡-轮询`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
