--- a/ACL4SSR_Online_Customize.ini
+++ b/ACL4SSR_Online_Customize.ini
@@ -20,8 +20,7 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Un
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-ruleset=DIRECT,[]GEOIP,CN
-;ruleset=DIRECT,[]GEOIP,CN,no-resolve
+ruleset=DIRECT,[]GEOIP,CN,no-resolve
 
 ruleset=🐟 漏网之鱼,[]FINAL
 
