--- a/ACL4SSR_Online_Customize.ini
+++ b/ACL4SSR_Online_Customize.ini
@@ -1,6 +1,7 @@
 [custom]
 ;acl4SSR规则-在线版
 
+ruleset=🧜🏻‍♀️ 特定路由-轮询,https://github.com/carl2018xy/Sub_C_Rules/raw/main/CustomizeDomain.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 ;常用分流。
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
@@ -22,8 +23,8 @@ ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ;规则之外。
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`⚖️ 负载均衡-轮询`[]DIRECT`.*
+custom_proxy_group=🌍 国外媒体`select`🧜🏻‍♀️ 特定路由-轮询`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT
@@ -31,6 +32,8 @@ custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=🧜🏻‍♀️ 特定路由-轮询`load-balance`(美国|台湾|韩国)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=⚖️ 负载均衡-轮询`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
