--- a/ACL4SSR_Online_Customize.ini
+++ b/ACL4SSR_Online_Customize.ini
@@ -23,8 +23,8 @@ ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ;规则之外。
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`⚖️ 负载均衡-轮询`[]DIRECT`.*
-custom_proxy_group=🌍 国外媒体`select`🧜🏻‍♀️ 特定路由-轮询`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]⚖️ 负载均衡-轮询`[]DIRECT`.*
+custom_proxy_group=🌍 国外媒体`select`[]🧜🏻‍♀️ 特定路由-轮询`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT
