--- a/Customize_Rules.ini
+++ b/Customize_Rules.ini
@@ -1,7 +1,9 @@
 [custom]
 ;acl4SSR规则-在线版
 
+;特定路由，优先。
 ruleset=🧜🏻‍♀️ 特定路由-轮询,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Specific_Domains.list
+;GFW Lite。
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 ;常用分流。
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
