--- a/Customize_Rules.ini
+++ b/Customize_Rules.ini
@@ -1,7 +1,8 @@
 [custom]
 ;acl4SSR规则-在线版
 
-;特定路由，优先。
+;直连/特定路由，优先。
+ruleset=DIRECT,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Direct_Domains.list.ini
 ruleset=🧜🏻‍♀️ 特定路由-轮询,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Specific_Domains.list
 ;GFW Lite。
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
