--- a/Customize_Rules.ini
+++ b/Customize_Rules.ini
@@ -1,7 +1,7 @@
 [custom]
 ;acl4SSR规则-在线版，修改以避免DNS泄露。
 
-ruleset=🧜🏻‍♀️ 特定路由-轮询,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Specific_Domains.list
+ruleset=🧜🏻‍♀️ 特定路由,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Specific_Domains.list
 ruleset=🎯 全球直连,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Direct_Domains.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
@@ -22,8 +22,8 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]⚖️ 负载均衡-轮询`[]DIRECT`.*
-custom_proxy_group=🌍 国外媒体`select`[]🧜🏻‍♀️ 特定路由-轮询`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]⚖️ 负载均衡`[]DIRECT`.*
+custom_proxy_group=🌍 国外媒体`select`[]🧜🏻‍♀️ 特定路由`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT
@@ -31,8 +31,8 @@ custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🍃 拦截净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🧜🏻‍♀️ 特定路由-轮询`load-balance`(美国|台湾|韩国)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=⚖️ 负载均衡-轮询`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🧜🏻‍♀️ 特定路由`load-balance`(美国|台湾|韩国)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=⚖️ 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
