--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -35,6 +35,7 @@ custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🍃 拦截净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=🧜🏻‍♀️ 特定路由`select`[]🚀 节点选择`[]DIRECT
 
 enable_rule_generator=true
 overwrite_original_rules=true
