--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -28,7 +28,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
-custom_proxy_group=🌍 国外媒体`select`🧜🏻‍♀️ 特定路由`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🧜🏻‍♀️ 特定路由`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT
