--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -1,7 +1,7 @@
 [custom]
 ;acl4SSR规则-在线版，修改以避免DNS泄露。
 
-ruleset=🚀 节点选择,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Specific_Domains.list
+ruleset=🧜🏻‍♀️ 特定路由,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Specific_Domains.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ;ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 
