--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -27,17 +27,17 @@ ruleset=🍃 拦截净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]⚖️ 负载均衡-哈希`[]DIRECT`.*
+custom_proxy_group=🚀 节点选择`select`[]🧜🏻‍♀️ 特定路由`[]DIRECT`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
-custom_proxy_group=🌍 国外媒体`select`[]🧜🏻‍♀️ 特定路由`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🍃 拦截净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=🧜🏻‍♀️ 特定路由`load-balance`(美国|台湾|韩国)`http://www.gstatic.com/generate_204`300,,
-custom_proxy_group=⚖️ 负载均衡-哈希`load-balance`.*`http://www.gstatic.com/generate_204`300,,
+custom_proxy_group=🧜🏻‍♀️ 特定路由`load-balance`(美国|US|台湾|TW|日本|JP|韩国|KR)`http://www.gstatic.com/generate_204`300,,
+;custom_proxy_group=⚖️ 负载均衡-哈希`load-balance`.*`http://www.gstatic.com/generate_204`300,,
 
 enable_rule_generator=true
 overwrite_original_rules=true
