--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -27,7 +27,7 @@ ruleset=🍃 拦截净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]🧜🏻‍♀️ 特定路由-哈希`[]DIRECT`.*
+custom_proxy_group=🚀 节点选择`select`[]🧜🏻‍♀️ 特定路由-哈希`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]DIRECT
