--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -1,7 +1,7 @@
 [custom]
 ;acl4SSR规则-在线版，修改以避免DNS泄露。
 
-ruleset=🧜🏻‍♀️ 特定路由-哈希,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Specific_Domains.list
+ruleset=🇹🇼 特定路由-哈希,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Specific_Domains.list
 
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 
@@ -27,7 +27,7 @@ ruleset=🍃 拦截净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]🧜🏻‍♀️ 特定路由-哈希`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]DIRECT
@@ -36,7 +36,7 @@ custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🍃 拦截净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=🧜🏻‍♀️ 特定路由-哈希`load-balance`(美国|US|台湾|TW|日本|JP|韩国|KR)`http://www.gstatic.com/generate_204`300,,
+custom_proxy_group=🇹🇼 特定路由-哈希`load-balance`(台湾|TW)`http://www.gstatic.com/generate_204`300,,
 
 enable_rule_generator=true
 overwrite_original_rules=true
