--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -1,12 +1,12 @@
 [custom]
 ;acl4SSR规则-在线版，修改以避免DNS泄露。
-
+;======================================================================================================================
+;需要特定链路的域名。
 ruleset=🇹🇼 特定路由-哈希,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Specific_Domains.list
-
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-
+;需要直接连接的域名。
 ruleset=🎯 全球直连,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Direct_Domains.list
-
+;======================================================================================================================
+;大陆直连规则。
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
@@ -15,27 +15,30 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
-
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=📲 电报信息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-
+;🍎 苹果服务
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+;======================================================================================================================
+;🧱 GFW列表。
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+;🌍 国外媒体。
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+;📲 电报信息
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+;📢 谷歌FCM。
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+;Ⓜ️ 微软服务
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+;======================================================================================================================
 ruleset=🍃 拦截净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 拦截净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-
-ruleset=🐟 漏网之鱼,[]FINAL
-
+;======================================================================================================================
+ruleset=♾️ 规则之外,[]FINAL
+;======================================================================================================================
+;控制组
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=🍃 拦截净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=🎯 全球直连`select`[]DIRECT
+custom_proxy_group=🍃 拦截净化`select`[]REJECT
+custom_proxy_group=♾️ 规则之外`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🇹🇼 特定路由-哈希`load-balance`(台湾|TW)`http://www.gstatic.com/generate_204`300,,
 
 enable_rule_generator=true
