--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -39,7 +39,7 @@ custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🍃 拦截净化`select`[]REJECT
 custom_proxy_group=♾️ 规则之外`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=🇹🇼 特定路由-哈希`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300,,
+custom_proxy_group=🇹🇼 特定路由-哈希`load-balance`(美国|US|🇺🇸|台湾|TW|🇹🇼|日本|JP|🇯🇵|韩国|KR|🇰🇷|新加坡|SG|🇸🇬)`http://www.gstatic.com/generate_204`300,,
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
