--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -39,7 +39,7 @@ custom_proxy_group=🚀 节点选择`select`[]🇺🇳 特定路由`[]DIRECT`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🍃 拦截净化`select`[]REJECT
 custom_proxy_group=♾️ 规则之外`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=🇺🇳 特定路由`load-balance`http://www.gstatic.com/generate_204`300,,
+custom_proxy_group=🇺🇳 特定路由`load-balance`.*`http://www.gstatic.com/generate_204`300,,
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
