--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -2,7 +2,7 @@
 ;acl4SSR规则-在线版，修改以避免DNS泄露。
 ;======================================================================================================================
 ;需要特定链路的域名。
-ruleset=🇺🇳 特定路由,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Specific_Domains.list
+ruleset=🚀 节点选择,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Specific_Domains.list
 ;需要直接连接的域名。
 ruleset=🎯 全球直连,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Direct_Domains.list
 ;======================================================================================================================
@@ -35,11 +35,11 @@ ruleset=🍃 拦截净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=♾️ 规则之外,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀 节点选择`select`[]🇺🇳 特定路由`[]DIRECT`.*
+custom_proxy_group=🚀 节点选择`select`[]🇺🇳 哈希`[]DIRECT`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🍃 拦截净化`select`[]REJECT
 custom_proxy_group=♾️ 规则之外`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=🇺🇳 特定路由`load-balance`.*`http://www.gstatic.com/generate_204`300,,
+custom_proxy_group=🇺🇳 哈希`load-balance`.*`http://www.gstatic.com/generate_204`300
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
