--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -40,7 +40,7 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🍃 拦截净化`select`[]REJECT
 custom_proxy_group=♾️ 规则之外`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🇹🇼 特定路由`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🇺🇳 负载均衡`load-balance`(美国|US|🇺🇸|台湾|TW|🇹🇼|日本|JP|🇯🇵|韩国|KR|🇰🇷|新加坡|SG|🇸🇬|香港|HK|🇭🇰)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇺🇳 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
