--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -3,8 +3,8 @@
 ;======================================================================================================================
 ;需要特定链路的域名。
 ruleset=🇹🇼 特定路由,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Specific_Domains.list
-;需要直接连接的域名。
-;ruleset=🎯 全球直连,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Direct_Domains.list
+;有必要直接连接的域名。
+ruleset=🎯 全球直连,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Direct_Domains.list
 ;======================================================================================================================
 ;大陆直连规则。
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
