--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -1,11 +1,8 @@
 [custom]
 ;acl4SSR规则-在线版，修改以避免DNS泄露。
 ;======================================================================================================================
-;需要特定链路的域名。
-ruleset=🇹🇼 特定路由,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Specific_Domains.list
-;有必要直接连接的域名。
+;🐻 有必要直接连接的域名。
 ruleset=🎯 全球直连,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Direct_Domains.list
-;======================================================================================================================
 ;大陆直连规则。
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
@@ -17,6 +14,11 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ;🍎 苹果服务
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+;======================================================================================================================
+;🦁 需要特定链路的域名。
+ruleset=🇹🇼 特定路由,https://github.com/carl2018xy/Sub_C_Rules/raw/main/Specific_Domains.list
+;🌍 国外媒体。
+ruleset=🇹🇼 特定路由,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ;======================================================================================================================
 ;🧱 GFW列表。
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
