--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -33,7 +33,7 @@ ruleset=♾️ 规则之外,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🍃 拦截净化`select`[]REJECT
-custom_proxy_group=♾️ 规则之外`select`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=♾️ 规则之外`select`[]🚀 节点选择
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
