--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -13,10 +13,10 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ;🍎 苹果服务
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ;======================================================================================================================
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+;======================================================================================================================
 ;🧱 GFW列表。
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-;🌍 国外媒体。
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ;📲 电报信息
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;📢 谷歌FCM。
@@ -31,6 +31,7 @@ ruleset=♾️ 规则之外,[]FINAL
 ;======================================================================================================================
 ;控制组
 custom_proxy_group=🚀 节点选择`select`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🍃 拦截净化`select`[]REJECT
 custom_proxy_group=♾️ 规则之外`select`[]🚀 节点选择
