--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -13,10 +13,12 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ;🍎 苹果服务
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ;======================================================================================================================
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+
 ;======================================================================================================================
 ;🧱 GFW列表。
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+;🌍 国外媒体
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ;📲 电报信息
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;📢 谷歌FCM。
