--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -20,7 +20,7 @@ ruleset=Ⓜ️ 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/C
 ;✈️ Telegram
 ruleset=✈️ Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;🦚 Twitter
-ruleset=🦚 Twitter,https://github.com/ACL4SSR/ACL4SSR/raw/master/Clash/Ruleset/Twitter.list
+ruleset=🦚 Twitter,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
 ;======================================================================================================================
 ;🧱 GFW列表。
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
