--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -14,9 +14,10 @@ ruleset=🎯 直连,[]GEOIP,CN,no-resolve
 ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ;======================================================================================================================
 ;🎬 国外媒体
-ruleset=🎬 外媒,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🐻 特定,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ;Ⓜ️ 微软服务
-ruleset=Ⓜ️ 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+ruleset=🐻 特定,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+;======================================================================================================================
 ;✈️ 电报
 ruleset=✈️ 电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;======================================================================================================================
@@ -33,8 +34,7 @@ ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ;======================================================================================================================
 ;控制组
 custom_proxy_group=🚀 代理`select`[]DIRECT
-custom_proxy_group=🎬 外媒`select`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软`select`[]DIRECT
+custom_proxy_group=🐻 特定`select`[]DIRECT
 custom_proxy_group=✈️ 电报`select`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
