--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -24,9 +24,8 @@ ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;📢 谷歌FCM。
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-;======================================================================================================================
 ;♾️ 规则之外
-ruleset=♾️ 规则之外,[]FINAL
+ruleset=🚀 代理,[]FINAL
 ;======================================================================================================================
 ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
@@ -36,7 +35,6 @@ custom_proxy_group=🚀 代理`select`[]DIRECT
 custom_proxy_group=🐻 特定`select`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
-custom_proxy_group=♾️ 规则之外`select`[]DIRECT
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
