--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -31,7 +31,7 @@ ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀 代理`select`[]DIRECT
+custom_proxy_group=🚀 代理`select`[]DIRECT`.*
 custom_proxy_group=🐻 特定`select`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
