--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -14,13 +14,12 @@ ruleset=🎯 直连,[]GEOIP,CN,no-resolve
 ;🍎 苹果服务
 ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ;======================================================================================================================
-;🎬 国外媒体
-ruleset=🐻 特定,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-;Ⓜ️ 微软服务
-ruleset=🐻 特定,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-;======================================================================================================================
 ;🧱 GFW列表。
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+;🎬 国外媒体
+ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+;Ⓜ️ 微软服务
+ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ;✈️ 电报
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;📢 谷歌FCM。
