--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -15,14 +15,15 @@ ruleset=🎯 直连,[]GEOIP,CN,no-resolve
 ;🍎 苹果服务
 ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ;======================================================================================================================
+;✈️ 电报
+ruleset=✈️ 电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+;======================================================================================================================
 ;🧱 GFW列表。
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ;🎬 国外媒体
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ;Ⓜ️ 微软服务
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-;✈️ 电报
-ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;📢 谷歌FCM。
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ;♾️ 规则之外
@@ -32,10 +33,10 @@ ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀 代理`select`[]🇹🇼 TW
+custom_proxy_group=🚀 代理`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🎯 直连`select`[]DIRECT
+custom_proxy_group=✈️ 电报`load-balance`(香港|HK|🇭🇰)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🍃 净化`select`[]REJECT
-custom_proxy_group=🇹🇼 TW`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
